hexagonal architecture (#2 - incomplete)